--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 experiments/1-text-pilot/Results/.Rhistory
 experiments/1-text-pilot/Results/.RData
+experiments/1-text-pilot/Submiterator-master/1-text-pilot.hits
