--- a/experiments/1-text-pilot/Submiterator-master/1-text-pilot.config
+++ b/experiments/1-text-pilot/Submiterator-master/1-text-pilot.config
@@ -1,8 +1,8 @@
 {
-"liveHIT":"no",
+"liveHIT":"yes",
 "title":"汉语语句",
 "description":"回答关于一些由中文写的短故事的问题",
-"experimentURL":"https://www.langsci.uci.edu/scontras/experiments/chinese_scope/1-text-pilot/text-pilot.html",
+"experimentURL":"https://www.langsci.uci.edu/scontras/experiments/chinese-scope/1-text-pilot/text-pilot.html",
 "keywords":"语言 研究 乐趣 认知科学 大学 汉语 chinese",
 "USonly?":"no",
 "minPercentPreviousHITsApproved":"95",
