--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ experiments/1-text-pilot/Submiterator-master/1-text-pilot.hits
 experiments/3-english-baseline/Submiterator-master/3-english-baseline.hits
 experiments/3-english-baseline/Submiterator-master/3-english-baseline-workerids.csv
 experiments/3-english-baseline/Submiterator-master/3-english-baseline-system.csv
+experiments/4-english-early-success/Submiterator-master/4-english-early-success-workerids.csv
+experiments/4-english-early-success/Submiterator-master/4-english-early-success.hits
