--- a/experiments/5-QUD/Submiterator-master/5-QUD.config
+++ b/experiments/5-QUD/Submiterator-master/5-QUD.config
@@ -2,13 +2,13 @@
 "liveHIT":"yes",
 "title":"汉语语句",
 "description":"回答关于一些由中文写的短故事的问题",
-"experimentURL":"https://www.langsci.uci.edu/scontras/experiments/chinese-scope/2-text-pilot/text-pilot.html",
-"keywords":"语言 研究 乐趣 认知科学 大学 汉语 chinese",
+"experimentURL":"https://www.langsci.uci.edu/scontras/experiments/chinese-scope/5-QUD/QUD.html",
+"keywords":"语言 研究 乐趣 认知科学 大学 汉语 chinese mandarin",
 "USonly?":"no",
 "minPercentPreviousHITsApproved":"95",
 "frameheight":"650",
-"reward":"0.50",
-"numberofassignments":"100",
+"reward":"0.60",
+"numberofassignments":"250",
 "assignmentsperhit": "9",
 "assignmentduration":"1800",
 "hitlifetime":"2592000",
