English QUD results

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ experiments/4-english-early-success/Submiterator-master/4-english-early-success-
 experiments/4-english-early-success/Submiterator-master/4-english-early-success.hits
 experiments/5-QUD/Submiterator-master/5-QUD-workerids.csv
 experiments/5-QUD/Submiterator-master/5-QUD.hits
+experiments/6-english-QUD/Submiterator-master/6-english-QUD-workerids.csv
+experiments/6-english-QUD/Submiterator-master/6-english-QUD.hits
