expanded english results

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ experiments/5-QUD/Submiterator-master/5-QUD-workerids.csv
 experiments/5-QUD/Submiterator-master/5-QUD.hits
 experiments/6-english-QUD/Submiterator-master/6-english-QUD-workerids.csv
 experiments/6-english-QUD/Submiterator-master/6-english-QUD.hits
+experiments/8-expanded-english/Submiterator-master/8-expanded-english.hits
+experiments/8-expanded-english/Submiterator-master/8-expanded-english-workerids.csv
