--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ experiments/6-english-QUD/Submiterator-master/6-english-QUD-workerids.csv
 experiments/6-english-QUD/Submiterator-master/6-english-QUD.hits
 experiments/8-expanded-english/Submiterator-master/8-expanded-english.hits
 experiments/8-expanded-english/Submiterator-master/8-expanded-english-workerids.csv
+experiments/3-English-baseline/.DS_Store
