--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ experiments/6-english-QUD/Submiterator-master/6-english-QUD.hits
 experiments/8-expanded-english/Submiterator-master/8-expanded-english.hits
 experiments/8-expanded-english/Submiterator-master/8-expanded-english-workerids.csv
 experiments/3-English-baseline/.DS_Store
+experiments/11-english-single-trial-no-goal-structure/Submiterator-master/11-english-single-trial-no-goal-structure-workerids.csv
+experiments/11-english-single-trial-no-goal-structure/Submiterator-master/11-english-single-trial-no-goal-structure.hits
