--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ experiments/8-expanded-english/Submiterator-master/8-expanded-english-workerids.
 experiments/3-English-baseline/.DS_Store
 experiments/11-english-single-trial-no-goal-structure/Submiterator-master/11-english-single-trial-no-goal-structure-workerids.csv
 experiments/11-english-single-trial-no-goal-structure/Submiterator-master/11-english-single-trial-no-goal-structure.hits
+experiments/12-english-multi-trial-goal-structure/Submiterator-master/12-english-multi-trial-goal-structure-workerids.csv
+experiments/12-english-multi-trial-goal-structure/Submiterator-master/12-english-multi-trial-goal-structure.hits
